--- a/index.html
+++ b/index.html
@@ -17,9 +17,93 @@
         </ul>
       </nav>
       <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:++38 096 111 11 11">+38 096 111 11 11</a>
+      <a href="tel:+380961111111">+38 096 111 11 11</a>
     </header>
-    <main></main>
-    <footer></footer>
+    <main>
+      <section>
+        <h1>Ефективні рішення для вашого бізнесу</h1>
+        <button type="button">Замовити послугу</button>
+      </section>
+      <section>
+        <h2>Особливості</h2>
+        <ul>
+          <li>
+            <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
+            <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+          </li>
+          <li>
+            <h3>ПУНКТУАЛЬНІСТЬ</h3>
+            <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+          </li>
+          <li>
+            <h3>ПЛАНУВАННЯ</h3>
+            <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+          </li>
+          <li>
+            <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+            <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Чим ми займаємося</h2>
+        <ul>
+          <li><img src="./images/img_1.jpg" width="370" height="294" alt="Людина програмує" /></li>
+          <li>
+            <img
+              src="./images/img_2.jpg"
+              width="370"
+              height="294"
+              alt="Дівчина створєю дизайн мобільного додатку"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/img_3.jpg"
+              width="370"
+              height="294"
+              alt="Людина підбирає колір на планшеті"
+            />
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Наша команда</h2>
+        <ul>
+          <li>
+            <img src="./images/person1.jpg" alt="Фотографія Ігор Дем'яненко " />
+            <h3>Ігор Дем'яненко</h3>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img src="./images/person2.jpg" alt="Фотографія Ольга Рєпіна" />
+            <h3>Ольга Рєпіна</h3>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img src="./images/person2.jpg" alt="Фотографія Микола Тарасов" />
+            <h3>Микола Тарасов</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img src="./images/person2.jpg" alt="Фотографія Михайло Єрмаков" />
+            <h3>Михайло Єрмаков</h3>
+            <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
+    </main>
+    <footer>
+      <a href=""><span>Web</span>Studio</a>
+      <address>
+        <ul>
+          <li>
+            <a href="https://goo.gl/maps/dn8XtDKzYARkyVmw8">м. Київ, пр-т Лесі Українки, 26</a>
+          </li>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
+      </address>
+    </footer>
   </body>
 </html>
