--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
           <li><a href="">Контакти</a></li>
         </ul>
       </nav>
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:+380961111111">+38 096 111 11 11</a>
+      <ul>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      </ul>
     </header>
     <main>
       <section>
@@ -48,7 +50,9 @@
       <section>
         <h2>Чим ми займаємося</h2>
         <ul>
-          <li><img src="./images/img_1.jpg" width="370" height="294" alt="Людина програмує" /></li>
+          <li>
+            <img src="./images/img_1.jpg" width="370" height="294" alt="Людина програмує" />
+          </li>
           <li>
             <img
               src="./images/img_2.jpg"
@@ -71,22 +75,42 @@
         <h2>Наша команда</h2>
         <ul>
           <li>
-            <img src="./images/person1.jpg" alt="Фотографія Ігор Дем'яненко " />
+            <img
+              src="./images/person1.jpg"
+              width="270"
+              height="260"
+              alt="Фотографія Ігор Дем'яненко "
+            />
             <h3>Ігор Дем'яненко</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="./images/person2.jpg" alt="Фотографія Ольга Рєпіна" />
+            <img
+              src="./images/person2.jpg"
+              width="270"
+              height="260"
+              alt="Фотографія Ольга Рєпіна"
+            />
             <h3>Ольга Рєпіна</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="./images/person2.jpg" alt="Фотографія Микола Тарасов" />
+            <img
+              src="./images/person3.jpg"
+              width="270"
+              height="260"
+              alt="Фотографія Микола Тарасов"
+            />
             <h3>Микола Тарасов</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="./images/person2.jpg" alt="Фотографія Михайло Єрмаков" />
+            <img
+              src="./images/person4.jpg"
+              width="270"
+              height="260"
+              alt="Фотографія Михайло Єрмаков"
+            />
             <h3>Михайло Єрмаков</h3>
             <p>UI Designer</p>
           </li>
